<resources>
    <string name="app_name">My Daily Planner</string>
    <string name="home_fragment_title">WELCOME BACK!</string>
    <string name="user_email">Your email</string>
    <string name="user_password">Your password</string>
    <string name="sign_in_button_text">Sign in to Your account</string>
    <string name="no_signed_up_acc">Don\'t have an account?</string>
    <string name="sign_up_for_free"><u>Sign up for free</u></string>
    <string name="sign_up_email">Enter your email:</string>
    <string name="sign_up_password">Enter password:</string>
    <string name="sign_up_confirm_password">Confirm password:</string>
    <string name="sign_up_button">Sign up</string>
    <string name="your_notes_text">Your notes</string>
    <string name="menu_icon">menu icon</string>
    <string name="create_new_note_temp">Create new note</string>
    <string name="new_note_icon">new note icon</string>
    <string name="n_notes_temp">n notes</string>
    <string name="note_title">note_title</string>
    <string name="note_text">note_text</string>
    <string name="note_title_add_note">Title…</string>
    <string name="note_text_add_note">Text…</string>
    <string name="add_note">add note!</string>
    <string name="edit_note">save</string>
    <string name="your_notes_drawer">Your notes</string>
    <string name="notes_list_logo">notes list logo</string>
    <string name="your_tasks_drawer">Your tasks</string>
    <string name="logout_drawer">Logout</string>
    <string name="back_button">back button</string>
    <string name="go_back_notes">Notes</string>
    <string name="sign_in">Sign in</string>
    <string name="your_tasks">Your tasks</string>
    <string name="n_tasks">n tasks</string>
    <string name="tasks_drawer_logout_logo">tasks_drawer_logout_logo</string>
    <string name="delete_task">delete task</string>
    <string name="task_text">Task text</string>
    <string name="date_26_10_2021">date: 26/10/2021</string>
    <string name="time_22_30">time: 22:30</string>
    <string name="go_back_tasks">Tasks</string>
    <string name="your_task_here">Task text…</string>
    <string name="add_task">add task!</string>
    <string name="select_time">Select time:</string>
    <string name="select_date">Select date:</string>
    <string name="default_date_picker">24/08/2020</string>
</resources>