<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".fragments.NewTaskFragment">

    <LinearLayout
        android:id="@+id/go_back_new_task"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        tools:ignore="UseCompoundDrawables,UselessParent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_arrow_back"
            tools:ignore="RedundantDescriptionCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".100"
            android:gravity="center_vertical"
            android:text="@string/go_back_tasks"
            android:textAlignment="gravity"
            android:textColor="#636363"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/new_task_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/go_back_new_task"
        android:layout_marginTop="15dp"
        android:background="@drawable/layout_background"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/your_task_here"
        android:textColor="#636363"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="LabelFor,TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_task_text"
        android:layout_marginTop="20dp"
        android:background="@drawable/list_view_style"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner" />

        <Button
            android:id="@+id/select_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/add_new_task_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/add_task"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>