<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/welcome_back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_fragment_title"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/sign_in_email"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:labelFor="@id/sign_in_email"
        android:minHeight="48dp"
        android:text="@string/user_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_back_text" />

    <EditText
        android:id="@+id/sign_in_password"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints="password"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text="@string/user_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_email" />

    <Button
        android:id="@+id/sign_in_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/sign_in_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_password"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/no_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/no_signed_up_acc"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/sign_up_for_free"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/no_account_text"
        app:layout_constraintStart_toEndOf="@id/no_account_text" />

</androidx.constraintlayout.widget.ConstraintLayout>