<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="7dp">

    <CheckBox
        android:id="@+id/task_checkbox"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/task_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/task_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/date_26_10_2021"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/task_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:text="@string/time_22_30"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>