<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NotesFragment">

    <LinearLayout
        android:id="@+id/header_notes"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/notes_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/menu_icon"
            android:src="@drawable/ic_menu" />

        <TextView
            android:id="@+id/header_notes_user_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".100"
            android:gravity="center_vertical"
            android:text="@string/your_notes_text"
            android:textAlignment="gravity"
            android:textColor="#636363"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/notes_list"
        android:layout_width="match_parent"
        android:layout_height="630dp"
        app:layout_constraintBottom_toTopOf="@id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_notes" />

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_list"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/notes_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".100"
            android:gravity="center_vertical"
            android:text="@string/n_notes_temp"
            android:textAlignment="gravity"
            android:textColor="#636363"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/new_note_icon"
            android:src="@drawable/ic_new_note" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>