<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NotesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/header_tasks"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/tasks_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/menu_icon_tasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/menu_icon"
                android:src="@drawable/ic_menu_open" />

            <TextView
                android:id="@+id/header_tasks_user_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".100"
                android:gravity="center_vertical"
                android:text="@string/your_tasks"
                android:textAlignment="gravity"
                android:textColor="#636363"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ListView
            android:id="@+id/tasks_list"
            android:layout_width="match_parent"
            android:layout_height="660dp"
            android:background="@drawable/list_view_style"
            app:layout_constraintBottom_toTopOf="@id/bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_tasks" />

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tasks_list"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/tasks_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".100"
                android:gravity="center_vertical"
                android:text="@string/n_tasks"
                android:textAlignment="gravity"
                android:textColor="#636363"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/add_new_note_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/new_note_icon"
                android:src="@drawable/ic_add_task" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:clickable="true"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/drawer_user_notes"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/drawer_items_style"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/your_notes_drawer"
                    android:textColor="#636363"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/your_notes_drawer"
                    android:src="@drawable/ic_notes"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/drawer_user_tasks"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/drawer_items_style"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/your_tasks_drawer"
                    android:textColor="#636363"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/your_tasks_drawer"
                    android:src="@drawable/ic_checklist"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/drawer_sign_out"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/drawer_items_style"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/logout_drawer"
                android:textColor="#636363"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tasks_drawer_logout_logo"
                android:src="@drawable/ic_logout"
                android:textAlignment="center" />

        </LinearLayout>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>