<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.NewNoteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/new_note_title"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_background"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/note_title_add_note"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/new_note_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,TextContrastCheck" />

        <EditText
            android:id="@+id/new_note_text"
            android:layout_width="370dp"
            android:layout_height="600dp"
            android:background="@drawable/layout_background"
            android:gravity="top|start"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@string/note_text_add_note"
            android:textSize="23sp"
            app:layout_constraintBottom_toTopOf="@id/add_new_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_note_title"
            tools:ignore="LabelFor,TextContrastCheck" />

        <Button
            android:id="@+id/add_new_note"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:text="@string/add_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_note_text"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>