<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/go_back_sign_up"
            android:layout_width="320dp"
            android:layout_height="30dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@id/sign_up_enter_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_arrow_back"
                tools:ignore="RedundantDescriptionCheck" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".100"
                android:gravity="center_vertical"
                android:text="@string/sign_in"
                android:textAlignment="gravity"
                android:textColor="#636363"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/sign_up_enter_email"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_email"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@id/sign_up_user_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/go_back_sign_up" />

        <EditText
            android:id="@+id/sign_up_user_email"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/layout_background"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:labelFor="@id/sign_up_user_email"
            android:minHeight="48dp"
            android:text=""
            app:layout_constraintBottom_toTopOf="@id/sign_up_enter_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_enter_email"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/sign_up_enter_password"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up_password"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@id/sign_up_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_user_email" />

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="password"
            android:background="@drawable/layout_background"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:text=""
            app:layout_constraintBottom_toTopOf="@id/sign_up_enter_confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_enter_password"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/sign_up_enter_confirm_password"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up_confirm_password"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@id/sign_up_confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_password" />

        <EditText
            android:id="@+id/sign_up_confirm_password"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="password"
            android:background="@drawable/layout_background"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:text=""
            app:layout_constraintBottom_toTopOf="@id/sign_up_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_enter_confirm_password"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_confirm_password"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>